# river-moto-ugc-demo

./: .gitignore  README.md  index.html  package-lock.json  package.json
olympus/: .env.example  .gitignore  README.md  pyproject.toml
olympus/src/olympus/: __init__.py
olympus/src/olympus/forge/: __init__.py
olympus/src/olympus/forge/avatar/: __init__.py  _models.py  heygen.py
olympus/src/olympus/hermes/: __init__.py  logging.py
revenants/: .env.example  .gitignore  README.md  pyproject.toml
revenants/docs/: heygen-render-path.md
revenants/examples/: demo_users.json  heygen_video_agent_demo.py
revenants/src/revenants/: __init__.py
revenants/src/revenants/generation/: __init__.py  prompt_rules.py
revenants/src/revenants/render/: __init__.py  multi_shot.py
src/: main.jsx  styles.css
src/data/: demoControlData.js  demoSeed.js
